# nova-de-course

./: .gitignore  README.md
apps/: docker-compose.yml  example.py
apps/synthetic_data_generator/: Makefile  README.md  main.py  pyproject.toml
apps/synthetic_data_generator/data/: cities.json  names.json
apps/synthetic_data_generator/output/: 2025-12-05-dev.csv
apps/synthetic_data_generator/src/: models.py  synthetic_data_generator.py
apps/synthetic_data_generator/src/services/: logger.py  nullable.py  validator.py
apps/synthetic_data_generator/src/utils/: translit.py
linux/: Dockerfile
linux/task/: analyze_logs.sh  report.txt
pg_ch/: docker-compose.yml
python_module/: main.py  pyproject.toml
python_module/spark/analyze_logs/.ipynb_checkpoints/: analyze_logs-checkpoint.ipynb
python_module/spark/analyze_logs/scripts/: generate_fake_logs.py
python_module/spark/booka_and_authors/: books_and_authors.ipynb
python_module/spark/movies_and_actors/.ipynb_checkpoints/: movies_and_actors-checkpoint.ipynb
python_module/spark/weatehr/: weather.ipynb
